# HM-Netology

./: .gitignore
HM/BD/HW 4/: CMakeLists.txt
HM/BD/HW 5/ORM/: ORM.sln  ORM.vcxproj  main.cpp
HM/Course project/RaceDLL/: Broom.h  CarpetPlane.h  Centaur.h  Eagle.cpp  Eagle.h  RaceDLL.vcxproj  RaceDLL.vcxproj.filters  Veh.h
HM/Course project/Racing_simulator/: Racing_simulator.cpp  Racing_simulator.sln  Racing_simulator.vcxproj
HM/Course project/Vehicle/: Vehicle.cpp  Vehicle.h  Vehicle.vcxproj  Vehicle.vcxproj.filters
HM/HM_BD_lesson4/: CMakeLists.txt  main.cpp
HM/Lesson 1/Task 1/Moths/: Moths.cpp  Moths.sln  Moths.vcxproj
HM/Lesson 1/Task 2/accounts/: accounts.cpp  accounts.sln  accounts.vcxproj.filters
HM/Lesson 1/Task 3/output_structure/: output_structure.sln  output_structure.vcxproj.filters
HM/Lesson 10/Task 1/Greeter/: Greeter.vcxproj
HM/Lesson 10/Task 1/Leaver/: Leaver.h  Leaver.vcxproj
HM/Lesson 10/Task 1/Static_library/: Static_library.cpp  Static_library.vcxproj
HM/Lesson 10/Task 2/CMake_dynamic_library/: CMakeLists.txt  Leaver.h
HM/Lesson 2/Task 1/Calculator/: Calculator.cpp  Calculator.vcxproj
HM/Lesson 2/Task 2/Counter/: Counter.cpp
HM/Lesson 3/Task 1/Adres/: Adres.cpp  Adres.sln  out.txt
HM/Lesson 3/Task 2/Adress_sort/: Adress_sort.cpp  Adress_sort.vcxproj.filters  in.txt
HM/Lesson 4/Task 1/Figures/: Figures.cpp  Figures.sln  Figures.vcxproj
HM/Lesson 4/Task 2/Sides _and_angles/: Sides _and_angles.vcxproj  Sides _and_angles.vcxproj.filters
HM/Lesson 4/Task 3/Methods/: Methods.cpp  Methods.sln
HM/UE/BaseCpp/: BaseCpp.uproject
HM/Базовое программирование на C++/Lesson 9/Task 2/More_complex_project/: CMakeLists.txt  More_complex_project.h  Quadrangle.cpp  RighTriangle.cpp  Triangle.cpp
HM_proverka/: HM_1.3.txt  HM_1.txt
(+498 files in other folders)
